fix: correct copyright message letter spacing

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -24,6 +24,7 @@
     font-size: 1.125rem;
     line-height: 1;
     font-weight: 700;
+    letter-spacing: 0.025em;
     margin: 0;
     @media (max-width: 670px) {
       font-size: 1rem;
